force-app/main/default/objects/dsalesRegion__c/dsalesRegion__c.object-meta.xml
<CustomObject>
    <label>Región</label>
    <nameField>
        <label>Nombre de Región</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regiones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>