force-app/main/default/objects/dsalesRegion__c/fields/dsalesIdCoppel__c.field-meta.xml
<CustomField>
    <fullName>dsalesIdCoppel__c</fullName>
    <description>Id de plataformas coppel</description>
    <label>Id Coppel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>