force-app/main/default/objects/dsalesRegion__c/fields/dsalesNombre__c.field-meta.xml
<CustomField>
    <fullName>dsalesNombre__c</fullName>
    <description>Nombre de región</description>
    <label>Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>