force-app/main/default/objects/dsalesRegion__c/fields/dsalesNumero__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumero__c</fullName>
    <description>Campo para registrar el numero del registro de Saleforce</description>
    <displayFormat>{000000}</displayFormat>
    <label>Número</label>
    <type>AutoNumber</type>
</CustomField>