force-app/main/default/objects/dsalesRegion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>dsalesActivo__c</columns>
    <columns>dsalesIdCoppel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>